--- a/app/views/intro/welcome.html.erb
+++ b/app/views/intro/welcome.html.erb
@@ -1,4 +1,7 @@
-<h1>Welcome Mr. <%= @user.username  %></h1>
+<body style="background-color:black">
+	<div style="position: absolute; top: 80px; left: 400px; width: 340px;background-color: #A4A1A1; padding: 30px; border-radius:12px; border: 3px solid"><h1>Welcome Mr. <%= @user.username  %></h1>
 <p><%= link_to 'Twitter', twitter.root_path %></p>
 <p><%= link_to 'Sign Out', :controller => "intro",:action => "logout" %>
 </p>
+</div>
+</body>
