--- a/app/assets/stylesheets/signup.css.scss
+++ b/app/assets/stylesheets/signup.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the signup controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.signup{
+	position: absolute; top: 80px; left: 400px; width: 340px; height: 650px; background-color:#A4A1A1; padding: 30px; border-radius:12px; border: 3px solid
+}
