--- a/app/views/signup/index.html.erb
+++ b/app/views/signup/index.html.erb
@@ -1,5 +1,5 @@
 <body style="background-color:black">
-	<div style="position: absolute; top: 80px; left: 400px; width: 340px; height: 650px; background-color:#A4A1A1; padding: 30px; border-radius:12px; border: 3px solid">
+	<div class="signup">
 	<%= link_to 'Back', :controller => "intro" %>
 	<h2>Sign Up</h2><br>
 	<% if params[:paramscheck] == '1' %>
